--- a/index.html
+++ b/index.html
@@ -11,11 +11,51 @@
       referrerpolicy="no-referrer"
     /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Expanding Cards</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
-    <h2>Hello !</h2>
+    <div class="container">
+      <div
+        class="panel active"
+        style="
+          background-image: url('https://images.pexels.com/photos/842711/pexels-photo-842711.jpeg');
+        "
+      >
+        <h3>Brown and Green Mountain</h3>
+      </div>
+      <div
+        class="panel"
+        style="
+          background-image: url('https://images.pexels.com/photos/5363575/pexels-photo-5363575.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+        "
+      >
+        <h3>Vineyard</h3>
+      </div>
+      <div
+        class="panel"
+        style="
+          background-image: url('https://images.pexels.com/photos/1456282/pexels-photo-1456282.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+        "
+      >
+        <h3>Blue Beach</h3>
+      </div>
+      <div
+        class="panel"
+        style="
+          background-image: url('https://images.pexels.com/photos/16672664/pexels-photo-16672664/free-photo-of-a-sunrise-over-a-valley-with-fog-and-hills.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+        "
+      >
+        <h3>Sunrise</h3>
+      </div>
+      <div
+        class="panel"
+        style="
+          background-image: url('https://images.pexels.com/photos/29376563/pexels-photo-29376563/free-photo-of-bled-island-with-church-on-lake-bled-slovenia.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+        "
+      >
+        <h3>Island Church</h3>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
